objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountEID__c</fullName>
        <description>The Enterprise ID for this Account.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Account.</inlineHelpText>
        <label>Account EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EmployeeCountSummary__c</fullName>
        <description>Total number of current employees in this account.</description>
        <inlineHelpText>Total number of current employees in this account.</inlineHelpText>
        <label>Number of Employees</label>
        <summaryFilterItems>
            <field>Employee__c.EmployedBitFormula__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Employee__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IE2AccountId__c</fullName>
        <description>Stores the client id from IE 2</description>
        <inlineHelpText>Stores the client id from IE 2</inlineHelpText>
        <label>IE2AccountID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SF1AccountId__c</fullName>
        <description>Stores the Account ID from the old implementation of SF</description>
        <inlineHelpText>Stores the Account ID from the old implementation of SF</inlineHelpText>
        <label>SF1AccountID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortName__c</fullName>
        <description>A short name for the client, to be used in communications.</description>
        <inlineHelpText>A short name for the client, to be used in communications.</inlineHelpText>
        <label>Short Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>